--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-route": "1.4.0",
     "angular-sanitize": "1.4.0",
     "angular-ui-router": "0.3.1",
-    "angular-bootstrap": "^2.5.0"
+    "angular-bootstrap": "^2.5.0",
+    "moment": "^2.18.1"
   },
   "devDependencies": {
     "angular-mocks": "1.4.0"
